# serializer version: 1
# name: test_FBCNN_color
  ImageModelDescriptor(
    architecture='FBCNN',
    input_channels=3,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
  )
# ---
# name: test_FBCNN_gray
  ImageModelDescriptor(
    architecture='FBCNN',
    input_channels=1,
    output_channels=1,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
  )
# ---
